# mes-agent

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: ci.yml
configs/: .env.example  rest-mapping.example.yaml
docs/: ARCHITECTURE.md  DEMO_SCENARIOS.md  MES_DOMAIN_MODEL.md  REST_CONNECTOR_MAPPING.md  ROOT_CAUSE_WORKFLOW.md  SESSION_AND_PERSISTENCE.md
examples/: demo_daily_report.py  demo_memory.py  demo_root_cause.py  demo_sqlite_memory.py  demo_traceability.py  demo_workflow_root_cause.py
scripts/: init-db.sql
src/manugent/: __init__.py  cli.py
src/manugent/agent/: core.py  session.py
src/manugent/api/: demo_page.py  server.py
src/manugent/config/: settings.py
src/manugent/connector/: __init__.py  demo.py  factory.py  rest.py
src/manugent/memory/: __init__.py  base.py  context.py  in_memory.py  recipes.py  sqlite.py
src/manugent/models/: __init__.py  domain.py
src/manugent/workflows/: __init__.py  root_cause.py
tests/: test_basic.py
