[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "manugent"
version = "0.1.0"
description = "AI Agent middleware for Manufacturing Execution Systems"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "ManuGent Contributors" },
]
keywords = [
    "manufacturing",
    "mes",
    "ai-agent",
    "llm",
    "factory",
    "industry-4.0",
    "smart-manufacturing",
    "mcp",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Manufacturing",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    # Core
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.3.0",
    "langchain-ollama>=0.2.0",

    # API
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",

    # Database
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29.0",
    "redis[hiredis]>=5.0",

    # Industrial Protocols
    "asyncio-mqtt>=0.16.0",
    "opcua>=0.98.13",

    # Utilities
    "httpx>=0.27.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0",
    "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0",
    "ruff>=0.6.0",
    "mypy>=1.10",
    "pre-commit>=3.7",
]
edge = [
    "ollama>=0.3.0",
]

[project.scripts]
manugent = "manugent.cli:app"

[project.urls]
Homepage = "https://github.com/15290391025/manugent"
Documentation = "https://github.com/15290391025/manugent#readme"
Repository = "https://github.com/15290391025/manugent"
Issues = "https://github.com/15290391025/manugent/issues"

# ============================================
# Tool Configuration
# ============================================

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"src/manugent/cli.py" = ["B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
